# AI-robot

./: Md语法-基础.md  README.md  比赛样题.md
AIoT物联网应用/树莓派趣味实验集合/: 1.树莓派控制led灯闪烁.py  2.树莓派控制直流马达转动.py  3.读取温度传感器数据.py  5.树莓派人脸识别.py  6.树莓派智能风扇.py  restful_api_set_motion.py
一些乱七八糟的代码/: DHT22_test.py  face_detect.py  face_fan.py  find_cat.py  jiaodu.py  kehuduan.py  knn_test.py  mada.py  opencv.py  rpi_led_server.py  sklearn_tree.py  smp1.py  tiaoshi.py  udp.py  wlw.py  y2.py  yanshee_client.py  测试.py
开源扩展/第三方云服务API集成到机器人/: 分析人脸.py
开源扩展/综合实验课之智能发明与竞技/: 3.体操教练员—Yanshee.py  4.会抓罪犯的Yanshee.py  人类和Yanshee下井字棋.py  视觉颜色识别与竞技PK.py
归档集合/: cwl提交记录.md  restfulapi模板.md  样题链接.md  比赛思路.md  调用API.md  连接机器人.md
最新修改的样题/: OpenCV库的一些补充知识.md  Tkinter 代码与拓展.md  restfulAPI.py  机器人场景设计.md  猫脸识别的一些笔记.md
最新修改的样题/中职题目/: 2-3cp.py  3-2cp.py  3-3cp.py  3-5cp.py  4-1cp.py  4-2cp.py
最新修改的样题/人脸分类/: visions.py
最新修改的样题/场景设计/: index.py
最新修改的样题/机器人远程控制/: 如何远程操控机器人.md
最新修改的样题/调用上传的音乐/: media_post_music.py
最新修改的样题/高职题目/: 2-3.py  2-4.py  2-5.py  4-1.py
机器人传感系统/1.红外线距离传感器/: 读取数据_RestfulAPI.py  读取数据_YanADK.py
机器人传感系统/2.超声波距离传感器/: 读取距离数据_RestfulAPI.py  读取距离数据_YanADK.py
机器人传感系统/3.触摸传感器/: 是否触摸_RestfulAPI.py  是否触摸_YanADK.py
机器人传感系统/4.压力传感器/: 压力读取_RestfulAPI.py  压力读取_YanADK.py
机器人传感系统/5.温湿度传感器/: 温湿度读取_RestfulAPI.py  温湿度读取_YanADK.py
机器人传感系统/6.让机器人摔倒后自动爬起/: 实现自动爬起_RestfulAPI.py  实现自动爬起_YanADK.py  读取机器人角度_RestfulAPI.py  读取机器人角度_YanADK.py
机器人视觉/1.图像及视频记录中的奥妙/: 录像.py  拍照.py  本地视频监控.py
机器人视觉/9.目标检测与机器人应用/MobileNetSSD_Yanshee/: CMakeLists.txt  MobileNetSSD  MobileNetSSD.cpp  README.md
(+67 files in other folders)
